
A precondition or normal postcondition annotation's `value` element must have
type `String[]`, not `String`.  A conditinoal postcondition annotation's
`expression` element must have type `String[]`, not `String`.  These changes
will not affect users (any programmer-written annotation that was legal before
will still be legal), but it may affect checker implementations.

Removed methods:
 * `AnnotationUtils.getElementValueArrayOrSingleton`

Removed deprecated `PluginUtil` class.

Method renamings:
 * `DefaultQualifierForUseTypeAnnotator.getSupportAnnosFromDefaultQualifierForUses` => `getDefaultQualifierForUses`

**Closed issues:**

---------------------------------------------------------------------------

Version 3.11.0, March 1, 2021

**User-visible changes:**

In a stub file for a class C, you may write a declaration for a method that is
inherited by C but not defined by it.  Previously, such stub declarations were
ignored.  For more information, see the manual's documentation of "fake
overrides".

Nullness Checker error message key changes:
 * `known.nonnull` => `nulltest.redundant`
 * `initialization.static.fields.uninitialized` => `initialization.static.field.uninitialized`,
   and it is now issued on the field rather than on the class
 * new `initialization.field.uninitialized` is issued on the field instead of
   `initialization.fields.uninitialized` on the class, if there is no
   explicitly-written constructor.

Signature Checker supports two new type qualifiers:
 * `@CanonicalNameAndBinaryName`
 * `@CanonicalNameOrPrimitiveType`

**Implementation details:**

You can make a variable's default type depend on its name, or a method
return type default depend on the method's name.  To support this feature,
`@DefaultFor` has new elements `names` and `namesExceptions`.

Changes to protected fields in `OverrideChecker`:
 * Removed `overriderMeth`, `overriderTyp`, `overriddenMeth`, `overriddenTyp`
 * Renamed `methodReference` => `isMethodReference`