@@ -8,7 +8,7 @@ import org.checkerframework.javacutil.AnnotationUtils;
 import org.checkerframework.javacutil.BugInCF;
 
 /** Changes each parameter type to be the GLB of the parameter type and visited type. */
-public class AnnotatedTypeCombiner extends AnnotatedTypeComparer<Void> {
+public class AnnotatedTypeCombiner extends DoubleAnnotatedTypeScanner<Void> {
 
     /**
      * Combines all annotations from {@code from} and {@code to} into {@code to} using the GLB.
@@ -42,17 +42,12 @@ public class AnnotatedTypeCombiner extends AnnotatedTypeComparer<Void> {
 
     @Override
     @SuppressWarnings("interning:not.interned") // assertion
-    protected Void compare(AnnotatedTypeMirror one, AnnotatedTypeMirror two) {
+    protected Void defaultAction(AnnotatedTypeMirror one, AnnotatedTypeMirror two) {
         assert one != two;
         if (one != null && two != null) {
             combineAnnotations(one, two);
         }
         return null;
-    }
-
-    @Override
-    protected Void combineRs(Void r1, Void r2) {
-        return r1;
     }
 
     /**
